# rust-clean-architecture-with-db-transactions

./: Cargo.toml  README.md
.codesandbox/: tasks.json
.rustup/: settings.toml
src/: main.rs
src/entities/: mod.rs  player.rs  team.rs
src/repositories/: mod.rs
src/repositories/in_memory/: mod.rs
src/repositories/in_memory/player/: commands.rs  mod.rs  queries.rs
src/repositories/in_memory/team/: commands.rs  queries.rs
src/repositories/postgres/: mod.rs
src/repositories/postgres/player/: commands.rs  queries.rs
src/repositories/postgres/team/: commands.rs  queries.rs
src/services/: mod.rs
src/services/commands/: mod.rs
src/services/commands/player/: create.rs  delete.rs  mod.rs  update.rs
src/services/commands/team/: create.rs  mod.rs
src/services/queries/: mod.rs
src/services/queries/player/: all.rs  find.rs  mod.rs
src/services/queries/team/: find.rs  mod.rs
